[package]
name = "hammersbald"
version = "3.0.1"
authors = [
    "Tamas Blummer <tamas.blummer@gmail.com>",
    "Steven Roose <steven@stevenroose.org>",
]
license = "Apache-2.0"
homepage = "https://github.com/rust-bitcoin/hammersbald/"
repository = "https://github.com/rust-bitcoin/hammersbald/"
documentation = "https://github.com/rust-bitcoin/hammersbald/"
description = "Hammersbald - fast persistent store for a blockchain"
keywords = [ "blockchain", "bitcoin", "hammersbald" ]
readme = "README.md"

[lib]
name = "hammersbald"
path = "src/lib.rs"

[features]
bitcoin_support = [ "bitcoin" ]

[dependencies]
rand = "0.8"
byteorder = "1.5"
lru-cache = "0.1.2"
bitcoin_hashes = "0.15"

bitcoin = { version= "0.32.4", optional = true }

[dev-dependencies]
hex = "0.4"
